- added custom level up screen for Ancestries and Kindred Spirits
- added Oath of Altruism level 15 and Way of the Dragon level 17 features
- added Ranger Hellwalker and Lightbearer subclasses
- fixed Grenadier not able to use items as a bonus action
- fixed interaction between Spear Mastery and Polearm Expert
- fixed Sanctuary not allowing cast on self