@@ -418,7 +418,6 @@ ConditionElementalistNormalIce	ConditionDefinition	ConditionDefinition	23bfdfb5-
 ConditionEnsnaringStrike	ConditionDefinition	ConditionDefinition	d88af821-2d98-5dd1-a112-f644dfb01001
 ConditionEnsnaringStrikeEnemy	ConditionDefinition	ConditionDefinition	d187d079-4674-5b3a-8906-467583847e18
 ConditionFarStep	ConditionDefinition	ConditionDefinition	40d9872e-be75-5c36-b6f6-e2f92d11b908
-ConditionFeatAwakenTheBeastWithin	ConditionDefinition	ConditionDefinition	3f54384e-4da6-5552-9b38-a00727cc8859
 ConditionFeatBladeMastery	ConditionDefinition	ConditionDefinition	d768dc3c-2bdd-511c-8cb8-98f57e50569b
 ConditionFeatCallForCharge	ConditionDefinition	ConditionDefinition	c16ce32f-da15-54c8-ad3c-e26c5428988e
 ConditionFeatCleavingAttack	ConditionDefinition	ConditionDefinition	54761e94-7473-5954-8fcb-785683bde2f8
@@ -979,7 +978,6 @@ AttributeModifierDomainSmithReinforceArmor4	FeatureDefinitionAttributeModifier	F
 AttributeModifierExtraAttackForce3	FeatureDefinitionAttributeModifier	FeatureDefinition	e6777b71-fe4c-5fd6-9bd1-3f0881270378
 AttributeModifierExtraAttackForce4	FeatureDefinitionAttributeModifier	FeatureDefinition	87a4b028-46ed-5cac-aa03-b4ec5f321a9c
 AttributeModifierFeatArcaneDefenseAdd	FeatureDefinitionAttributeModifier	FeatureDefinition	254a38f0-cac9-51c5-8972-4924da9d2bb4
-AttributeModifierFeatAwakenTheBeastWithin	FeatureDefinitionAttributeModifier	FeatureDefinition	5092703a-d5a3-5f49-8ca6-a997688d5861
 AttributeModifierFeatBladeMastery	FeatureDefinitionAttributeModifier	FeatureDefinition	0b20d3c7-ec41-591d-943d-e1709702206a
 AttributeModifierFeatCharismaticDefenseAdd	FeatureDefinitionAttributeModifier	FeatureDefinition	2ca9046a-c0ac-5e61-8461-467880fe0bdb
 AttributeModifierFeatDefensiveDuelist	FeatureDefinitionAttributeModifier	FeatureDefinition	290701ea-b9e5-59d8-8884-bac2c69781ec
@@ -2067,7 +2065,6 @@ SuggestedSkillsSellswordBackground	FeatureDefinition	FeatureDefinition	c161c910-
 SuggestedSkillsSpyBackground	FeatureDefinition	FeatureDefinition	773f84be-81f1-5c97-8f68-438096152a6c
 SuggestedSkillsWandererBackground	FeatureDefinition	FeatureDefinition	fdbe7b64-5c1a-5f7c-9560-cfd8ea6d822a
 SummoningAffinityDeadMasterUndeadChains	FeatureDefinitionSummoningAffinity	FeatureDefinition	afdb20e8-8265-5158-86f0-89a10fad52c1
-SummoningAffinityFeatAwakenTheBeastWithin	FeatureDefinitionSummoningAffinity	FeatureDefinition	698e1537-52f4-519e-8431-8ac097aac552
 SummoningAffinityInnovationWeaponSummonSteelDefender	FeatureDefinitionSummoningAffinity	FeatureDefinition	e1f271a7-ad06-5ffc-b4b6-fae7ac0a8430
 SummoningAffinityMarshalEternalComrade	FeatureDefinitionSummoningAffinity	FeatureDefinition	9b78851e-c577-543a-8492-7d6b32e33384
 SummoningAffinityWildMasterSummonSpiritBeast03	FeatureDefinitionSummoningAffinity	FeatureDefinition	11fe31a6-2809-54e7-83c3-585d298cdef7
@@ -2428,7 +2425,6 @@ SavingThrowAffinityRoguishArcaneScoundrelDistractingAmbush	FeatureDefinitionSavi
 SavingThrowAffinitySpellMasterSpellResistance	FeatureDefinitionSavingThrowAffinity	FeatureDefinitionAffinity	5f04b83f-67b6-58ee-856d-ec98d007859c
 SavingThrowAffinityWildMasterSummonSpiritBeast	FeatureDefinitionSavingThrowAffinity	FeatureDefinitionAffinity	019e0fed-a6d9-5224-b405-21f96da7ac5e
 SummoningAffinityDeadMasterUndeadChains	FeatureDefinitionSummoningAffinity	FeatureDefinitionAffinity	afdb20e8-8265-5158-86f0-89a10fad52c1
-SummoningAffinityFeatAwakenTheBeastWithin	FeatureDefinitionSummoningAffinity	FeatureDefinitionAffinity	698e1537-52f4-519e-8431-8ac097aac552
 SummoningAffinityInnovationWeaponSummonSteelDefender	FeatureDefinitionSummoningAffinity	FeatureDefinitionAffinity	e1f271a7-ad06-5ffc-b4b6-fae7ac0a8430
 SummoningAffinityMarshalEternalComrade	FeatureDefinitionSummoningAffinity	FeatureDefinitionAffinity	9b78851e-c577-543a-8492-7d6b32e33384
 SummoningAffinityWildMasterSummonSpiritBeast03	FeatureDefinitionSummoningAffinity	FeatureDefinitionAffinity	11fe31a6-2809-54e7-83c3-585d298cdef7
@@ -2507,7 +2503,6 @@ AttributeModifierDomainSmithReinforceArmor4	FeatureDefinitionAttributeModifier	F
 AttributeModifierExtraAttackForce3	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	e6777b71-fe4c-5fd6-9bd1-3f0881270378
 AttributeModifierExtraAttackForce4	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	87a4b028-46ed-5cac-aa03-b4ec5f321a9c
 AttributeModifierFeatArcaneDefenseAdd	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	254a38f0-cac9-51c5-8972-4924da9d2bb4
-AttributeModifierFeatAwakenTheBeastWithin	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	5092703a-d5a3-5f49-8ca6-a997688d5861
 AttributeModifierFeatBladeMastery	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	0b20d3c7-ec41-591d-943d-e1709702206a
 AttributeModifierFeatCharismaticDefenseAdd	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	2ca9046a-c0ac-5e61-8461-467880fe0bdb
 AttributeModifierFeatDefensiveDuelist	FeatureDefinitionAttributeModifier	FeatureDefinitionAttributeModifier	290701ea-b9e5-59d8-8884-bac2c69781ec
@@ -3418,7 +3413,6 @@ SenseBlindFighting	FeatureDefinitionSense	FeatureDefinitionSense	052275a0-0bf7-5
 SenseRangerFeralSenses	FeatureDefinitionSense	FeatureDefinitionSense	0c871bac-a395-517c-a691-af2098e07d2d
 SubclassChoiceInventor	FeatureDefinitionSubclassChoice	FeatureDefinitionSubclassChoice	00e82007-cb39-5d19-a903-551a8fa5e13e
 SummoningAffinityDeadMasterUndeadChains	FeatureDefinitionSummoningAffinity	FeatureDefinitionSummoningAffinity	afdb20e8-8265-5158-86f0-89a10fad52c1
-SummoningAffinityFeatAwakenTheBeastWithin	FeatureDefinitionSummoningAffinity	FeatureDefinitionSummoningAffinity	698e1537-52f4-519e-8431-8ac097aac552
 SummoningAffinityInnovationWeaponSummonSteelDefender	FeatureDefinitionSummoningAffinity	FeatureDefinitionSummoningAffinity	e1f271a7-ad06-5ffc-b4b6-fae7ac0a8430
 SummoningAffinityMarshalEternalComrade	FeatureDefinitionSummoningAffinity	FeatureDefinitionSummoningAffinity	9b78851e-c577-543a-8492-7d6b32e33384
 SummoningAffinityWildMasterSummonSpiritBeast03	FeatureDefinitionSummoningAffinity	FeatureDefinitionSummoningAffinity	11fe31a6-2809-54e7-83c3-585d298cdef7
