@@ -1,156 +1,0 @@
-{
-  "$type": "ConditionDefinition, Assembly-CSharp",
-  "inDungeonEditor": false,
-  "parentCondition": null,
-  "conditionType": "Beneficial",
-  "features": [
-    "Definition:AttributeModifierFeatAwakenTheBeastWithin:5092703a-d5a3-5f49-8ca6-a997688d5861",
-    "Definition:AttributeModifierFeatAwakenTheBeastWithin:5092703a-d5a3-5f49-8ca6-a997688d5861"
-  ],
-  "allowMultipleInstances": false,
-  "silentWhenAdded": true,
-  "silentWhenRemoved": true,
-  "terminateWhenRemoved": false,
-  "specialDuration": false,
-  "durationType": "Hour",
-  "durationParameterDie": "D4",
-  "durationParameter": 1,
-  "forceTurnOccurence": false,
-  "turnOccurence": "EndOfTurn",
-  "specialInterruptions": [],
-  "interruptionRequiresSavingThrow": false,
-  "interruptionSavingThrowComputationMethod": "SaveOverride",
-  "interruptionSavingThrowAbility": "",
-  "interruptionDamageThreshold": 0,
-  "keepConditionIfSavingThrowSucceeds": false,
-  "interruptionSavingThrowAffinity": "None",
-  "conditionTags": [],
-  "recurrentEffectForms": [],
-  "cancellingConditions": [],
-  "additionalDamageWhenHit": false,
-  "additionalDamageTypeDetermination": "Specific",
-  "additionalDamageType": "Druid",
-  "additionalDamageQuantity": "AbilityBonus",
-  "additionalDamageDieType": "D1",
-  "additionalDamageDieNumber": 1,
-  "additionalConditionWhenHit": false,
-  "additionalCondition": null,
-  "additionalConditionDurationType": "Round",
-  "additionalConditionDurationParameter": 1,
-  "additionalConditionTurnOccurenceType": "StartOfTurn",
-  "conditionStartParticleReference": {
-    "$type": "UnityEngine.AddressableAssets.AssetReference, Unity.Addressables",
-    "m_AssetGUID": "",
-    "m_SubObjectName": null,
-    "m_SubObjectType": null
-  },
-  "conditionParticleReference": {
-    "$type": "UnityEngine.AddressableAssets.AssetReference, Unity.Addressables",
-    "m_AssetGUID": "",
-    "m_SubObjectName": null,
-    "m_SubObjectType": null
-  },
-  "conditionEndParticleReference": {
-    "$type": "UnityEngine.AddressableAssets.AssetReference, Unity.Addressables",
-    "m_AssetGUID": "",
-    "m_SubObjectName": null,
-    "m_SubObjectType": null
-  },
-  "recurrentEffectParticleReference": null,
-  "characterShaderReference": {
-    "$type": "UnityEngine.AddressableAssets.AssetReference, Unity.Addressables",
-    "m_AssetGUID": "",
-    "m_SubObjectName": null,
-    "m_SubObjectType": null
-  },
-  "particlesBasedOnAncestryDamageType": false,
-  "ancestryType": "Sorcerer",
-  "acidParticleParameters": null,
-  "coldParticleParameters": null,
-  "fireParticleParameters": null,
-  "lightningParticleParameters": null,
-  "poisonParticleParameters": null,
-  "overrideCharacterShaderColors": false,
-  "firstCharacterShaderColor": {
-    "$type": "UnityEngine.Color, UnityEngine.CoreModule",
-    "r": 0.0,
-    "g": 0.0,
-    "b": 0.0,
-    "a": 0.0
-  },
-  "secondCharacterShaderColor": {
-    "$type": "UnityEngine.Color, UnityEngine.CoreModule",
-    "r": 0.0,
-    "g": 0.0,
-    "b": 0.0,
-    "a": 0.0
-  },
-  "timeToWaitBeforeApplyingShader": 0.5,
-  "timeToWaitBeforeRemovingShader": 0.5,
-  "possessive": false,
-  "amountOrigin": 9002,
-  "baseAmount": 0,
-  "additiveAmount": false,
-  "sourceAbilityBonusMinValue": 1,
-  "subsequentOnRemoval": null,
-  "subsequentHasSavingThrow": false,
-  "subsequentSavingThrowAbilityScore": "Constitution",
-  "subsequentVariableForDC": "FrenzyExhaustionDC",
-  "subsequentDCIncrease": 5,
-  "effectFormsOnRemoved": [],
-  "forceBehavior": false,
-  "fearSource": false,
-  "battlePackage": null,
-  "explorationPackage": null,
-  "removedFromTheGame": false,
-  "permanentlyRemovedIfExtraPlanar": false,
-  "refundReceivedDamageWhenRemoved": false,
-  "followSourcePosition": false,
-  "disolveCharacterOnDeath": false,
-  "disolveParameters": {
-    "$type": "GraphicsCharacterDefinitions+DisolveParameters, Assembly-CSharp",
-    "color": {
-      "$type": "UnityEngine.Color, UnityEngine.CoreModule",
-      "r": 0.0,
-      "g": 0.0,
-      "b": 0.0,
-      "a": 0.0
-    },
-    "colorWidth": 0.0,
-    "noiseScale": 5.0,
-    "hueScale": 0.0,
-    "vertexOffset": 0.0,
-    "curve": {
-      "$type": "UnityEngine.AnimationCurve, UnityEngine.CoreModule"
-    },
-    "startAfterDeathAnimation": false,
-    "duration": 0.0
-  },
-  "guiPresentation": {
-    "$type": "GuiPresentation, Assembly-CSharp",
-    "hidden": false,
-    "title": "Feature/&NoContentTitle",
-    "description": "Feature/&NoContentTitle",
-    "spriteReference": {
-      "$type": "UnityEngine.AddressableAssets.AssetReferenceSprite, Unity.Addressables",
-      "m_AssetGUID": "",
-      "m_SubObjectName": null,
-      "m_SubObjectType": null
-    },
-    "color": {
-      "$type": "UnityEngine.Color, UnityEngine.CoreModule",
-      "r": 1.0,
-      "g": 1.0,
-      "b": 1.0,
-      "a": 1.0
-    },
-    "symbolChar": "221E",
-    "sortOrder": 0,
-    "unusedInSolastaCOTM": false,
-    "usedInValleyDLC": false
-  },
-  "contentCopyright": "UserContent",
-  "guid": "3f54384e-4da6-5552-9b38-a00727cc8859",
-  "contentPack": 9999,
-  "name": "ConditionFeatAwakenTheBeastWithin"
-}
