@@ -1,37 +1,0 @@
-{
-  "$type": "FeatureDefinitionAttributeModifier, Assembly-CSharp",
-  "modifiedAttribute": "HitPointBonusPerLevel",
-  "modifierOperation": "AddConditionAmount",
-  "modifierValue": 0,
-  "modifierAbilityScore": "Constitution",
-  "situationalContext": "None",
-  "minimum1": false,
-  "useBonusFromCaster": false,
-  "guiPresentation": {
-    "$type": "GuiPresentation, Assembly-CSharp",
-    "hidden": true,
-    "title": "Feature/&NoContentTitle",
-    "description": "Feature/&NoContentTitle",
-    "spriteReference": {
-      "$type": "UnityEngine.AddressableAssets.AssetReferenceSprite, Unity.Addressables",
-      "m_AssetGUID": "",
-      "m_SubObjectName": null,
-      "m_SubObjectType": null
-    },
-    "color": {
-      "$type": "UnityEngine.Color, UnityEngine.CoreModule",
-      "r": 1.0,
-      "g": 1.0,
-      "b": 1.0,
-      "a": 1.0
-    },
-    "symbolChar": "221E",
-    "sortOrder": 0,
-    "unusedInSolastaCOTM": false,
-    "usedInValleyDLC": false
-  },
-  "contentCopyright": "UserContent",
-  "guid": "5092703a-d5a3-5f49-8ca6-a997688d5861",
-  "contentPack": 9999,
-  "name": "AttributeModifierFeatAwakenTheBeastWithin"
-}
