@@ -1,38 +1,0 @@
-{
-  "$type": "FeatureDefinitionSummoningAffinity, Assembly-CSharp",
-  "requiredMonsterTag": "WildShape",
-  "addedConditions": [
-    "Definition:ConditionFeatAwakenTheBeastWithin:3f54384e-4da6-5552-9b38-a00727cc8859"
-  ],
-  "effectOnConjuredDeath": false,
-  "effectForms": [],
-  "myselfFamilyRestrictions": [],
-  "otherCharacterFamilyRestrictions": [],
-  "guiPresentation": {
-    "$type": "GuiPresentation, Assembly-CSharp",
-    "hidden": false,
-    "title": "Feature/&NoContentTitle",
-    "description": "Feature/&NoContentTitle",
-    "spriteReference": {
-      "$type": "UnityEngine.AddressableAssets.AssetReferenceSprite, Unity.Addressables",
-      "m_AssetGUID": "",
-      "m_SubObjectName": null,
-      "m_SubObjectType": null
-    },
-    "color": {
-      "$type": "UnityEngine.Color, UnityEngine.CoreModule",
-      "r": 1.0,
-      "g": 1.0,
-      "b": 1.0,
-      "a": 1.0
-    },
-    "symbolChar": "221E",
-    "sortOrder": 0,
-    "unusedInSolastaCOTM": false,
-    "usedInValleyDLC": false
-  },
-  "contentCopyright": "UserContent",
-  "guid": "698e1537-52f4-519e-8431-8ac097aac552",
-  "contentPack": 9999,
-  "name": "SummoningAffinityFeatAwakenTheBeastWithin"
-}
