@@ -1,6 +1,8 @@
 - added custom level up screen for Ancestries and Kindred Spirits
 - added Oath of Altruism level 15 and Way of the Dragon level 17 features
 - added Ranger Hellwalker and Lightbearer subclasses
+- fixed Awaken the Beast Within to grant temp HP to beast and remove on shape reversal
+- fixed critical logic option 1 still granting double dice damage
 - fixed Grenadier not able to use items as a bonus action
 - fixed interaction between Spear Mastery and Polearm Expert
 - fixed Sanctuary not allowing cast on self
